[gd_scene load_steps=4 format=3 uid="uid://dcf67nr7bp2we"]

[ext_resource type="PackedScene" uid="uid://mm5ykk6g1ii4" path="res://GodotASCIIToolKit/Controls/BasicBoxes/ascii_box.tscn" id="1_aj6nk"]
[ext_resource type="Script" uid="uid://b5bpco7fx1sfi" path="res://GodotASCIIToolKit/Controls/TextBoxes/ascii_custom_text_box.gd" id="2_ems1a"]
[ext_resource type="PackedScene" uid="uid://cvbfr48cx50un" path="res://GodotASCIIToolKit/Controls/ascii_label.tscn" id="3_va5hx"]

[node name="ASCIICustomTextBox" instance=ExtResource("1_aj6nk")]
offset_right = 40.0
script = ExtResource("2_ems1a")
text = "Worker of the world, unite!"
box_visible = true
horizontal_alignment = 0
vertical_alignment = 0
margins = Array[int]([1, 1, 0, 0])

[node name="BoxLabel" parent="." index="1"]
text = "┌───┐
│   │
└───┘
"

[node name="TextLabel" parent="." index="2" instance=ExtResource("3_va5hx")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "Worker of the world, unite!"
autowrap_mode = 3
clip_text = true
metadata/_edit_lock_ = true
